# stordy

./: .gitignore  Cargo.toml  Stordy Página2.csv  block_pb2.py  block_pb2_grpc.py  build.rs  transaction_pb2.py  transaction_pb2_grpc.py
analysis/: diff-using-stordy.gp  readme.md  time-to-append.gp
blocks/: ubtd1hpay6by5l4lqgavoxpa
gnuplot/: Stordy.xlsx  dados.txt  diff-using-stordy.gp  time-to-append.gp
my_db/: db  snap.0000000000000089
src/: block.rs  btree.rs  main.rs  transaction.rs
src/proto/: transaction.proto
src/protos/: block.buffer.proto  block.proto  transaction.buffer.proto  transaction.proto
