[package]
name = "stordy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
cuid = "1.3.2"
prost = "0.12.3"
prost-types = "0.12.3"
sled = "0.34.7"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.11.0"

[build-dependencies]
prost-build = "0.12.3"
tonic-build = "0.11.0"
